--- a/src/EventPi.Services.Camera.Ui/CameraControls.razor
+++ b/src/EventPi.Services.Camera.Ui/CameraControls.razor
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Http
+﻿@using EventPi.Services.Camera.Contract
+@using Microsoft.AspNetCore.Http
 @using ModelingEvolution.Observable.Blazor
 @inject CameraControlVmRegister _vmRegister
 
