--- a/src/EventPi.NetworkMonitor.App.Blazor/Components/_Imports.razor
+++ b/src/EventPi.NetworkMonitor.App.Blazor/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using EventPi.Services.NetworkMonitor.Ui
 @using EventPi.NetworkMonitor.App.Blazor.Components
 @using MudBlazor
+@using EventPi.Abstractions
