--- a/src/EventPi.Services.Camera.Ui/CameraControls.razor
+++ b/src/EventPi.Services.Camera.Ui/CameraControls.razor
@@ -31,7 +31,7 @@
             </tbody>
         </MudSimpleTable>
     </Observable>
-    <MudButtonGroup Variant="Variant.Filled">
+    <MudButtonGroup Variant="Variant.Filled" Style="align-self:center" Size="Size.Large" >
         <MudButton OnClick="@_vm.Cancel" >Cancel</MudButton>
         <MudButton OnClick="@_vm.Save" >Save</MudButton>
     </MudButtonGroup>
