--- a/src/EventPi.NetworkMonitor.App.Blazor/Components/App.razor
+++ b/src/EventPi.NetworkMonitor.App.Blazor/Components/App.razor
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="EventPi.NetworkMonitor.App.Blazor.styles.css" />
+    <link rel="stylesheet" href="epi-nm.styles.css" />
+
+
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="InteractiveServer" />
 </head>
