--- a/src/EventPi.Services.Camera.Ui/CameraControls.razor
+++ b/src/EventPi.Services.Camera.Ui/CameraControls.razor
@@ -9,6 +9,14 @@
         <MudSimpleTable Dense="true" Bordered="false">
             <tbody>
             <tr>
+                <td style="width: 150px"><MudNumericField @bind-Value="@_vm.RecognitionService.DetectWeldingBound" Label="Welding bound"></MudNumericField></td>
+                <td><MudSlider @bind-Value="_vm.RecognitionService.DetectWeldingBound" Min="1" Max="160000" Step="1" Color="Color.Info"></MudSlider></td>
+            </tr>
+            <tr>
+                <td style="width: 150px"><MudNumericField @bind-Value="@_vm.RecognitionService.DetectNonWeldingBound" Label="Non Welding bound"></MudNumericField></td>
+                    <td><MudSlider @bind-Value="_vm.RecognitionService.DetectNonWeldingBound" Min="1" Max="160000" Step="1" Color="Color.Info"></MudSlider></td>
+            </tr>
+            <tr>
                 <td>
                     <MudSelect T="HdrModeEnum" Label="HDR mode" @bind-Value="@_cmd.HdrMode">
                         @foreach (HdrModeEnum hdrMode in Enum.GetValues(typeof(HdrModeEnum)))
